--- a/client/src/components/App.css
+++ b/client/src/components/App.css
@@ -1,43 +1,69 @@
 body, html {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
 }
 
 .App {
-    text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  width: 100vw;
+  background-color: #282c34;
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+
 }
 
-.App-link {
-  color: #61dafb;
+.container {
+  display: flex;
+
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.left-section,
+.middle-section,
+.right-section {
+  width: 33.33vw;
+}
+
+.middle-section {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  background-color: #113c92;
+
+}
+
+.right-section {
+  display: flex;
+  flex-direction: column;
+  background-color: #119261;
+
+}
+
+.grid-container {
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
+  height: 100%;
+}
+
+.grid-row {
+  display: flex;
+  width: 100%;
+  /* height: calc(100% / numRows); */ /* Ces valeurs doivent être définies dynamiquement dans le composant */
+}
+
+.grid-cell {
+  /* width: calc(100% / numColumns); */ /* Ces valeurs doivent être définies dynamiquement dans le composant */
+  height: 100%;
 }
