--- a/client/src/assets/design.css
+++ b/client/src/assets/design.css
@@ -282,8 +282,8 @@ h3 { font-size: calc(var(--font-size-base) * 1.5); }
 /* Game */
 .tetris-game
 {
-	display: flex;
-	flex-flow: column nowrap;
+	display: grid;
+	grid-template-rows: auto 1fr auto;
 	gap: var(--gap-md);
 }
 
@@ -295,85 +295,138 @@ h3 { font-size: calc(var(--font-size-base) * 1.5); }
 .tetris-game__content
 {
 	display: grid;
-	grid-template-columns: repeat(3, 1fr);
+	grid-template-columns: repeat(3, minmax(0, 1fr));
+	grid-template-rows: minmax(0, 1fr);
 	gap: var(--gap-md);
-	flex-grow: 1;
 }
 
 .tetris-game__specters
 {
 	display: grid;
-	grid-template-columns: repeat(var(--cols, 1), 1fr);
-	grid-template-rows: repeat(var(--rows, 1), 1fr);
+	grid-template-columns: repeat(var(--_specters-cols, 1), 1fr);
+	grid-template-rows: repeat(var(--_specters-rows, 1), 1fr);
 	gap: var(--gap-sm);
 }
 
 .tetris-game__footer
 {
 	width: 20em;
-	align-self: center;
+	place-self: center;
 }
 
 /* Board */
 .tetris-board
 {
+	container: TetrisBoard / size;
 	display: flex;
-	position: relative;
+	flex-flow: column nowrap;
+	gap: var(--gap-sm);
+}
+
+.tetris-board__header
+{
+	display: flex;
+	flex-flow: row nowrap;
+	justify-content: space-between;
+	gap: var(--gap-sm);
+	padding: var(--gap-xs) var(--gap-sm);
+	overflow: hidden;
+	border: var(--border-width) solid var(--color-dark);
 }
 
 .tetris-board__sidebar
 {
 	display: flex;
-	flex-flow: column nowrap;
+	flex-flow: row nowrap;
+	justify-content: center;
 	gap: var(--gap-sm);
-	padding: var(--gap-sm);
 }
 
 .tetris-board__grid
 {
 	display: grid;
 	flex-grow: 1;
-	padding: var(--border-width);
-	border: var(--border-width) solid var(--color-dark);
 }
 
-/* Piece */
-.tetris-pieces
+/* Header */
+.tetris-board__header span
 {
-
+	flex: 1 1 0;
+	text-overflow: ellipsis;
+	overflow: hidden;
 }
 
+.tetris-board__header span:last-child
+{
+	text-align: right;
+}
+
+/* Sidebar */
 .tetris-sidebar__preview
 {
 	display: grid;
+	width: clamp(48px, 10vmin, 64px);
 	aspect-ratio: 1;
-	padding: var(--border-width);
 	border: var(--border-width) solid var(--color-dark);
+	background: var(--color-darkest);
 }
 
-.tetris-sidebar__player
+.tetris-sidebar__preview--unknown
 {
-	position: absolute;
-	top: -8px;
-	right:4px;
-	rotate: -90deg;
-	transform-origin: 100% 100%;
-	color: var(--color-dimest);
-	font-size: 0.8em;
-	z-index: -1;
+	place-self: center;
+}
+
+.tetris-sidebar__preview .tetris-grid
+{
+	justify-content: center;
+}
+
+.tetris-sidebar__preview .tetris-grid__cell
+{
+	border: 1px solid var(--color-darkest) !important;
 }
 
 /* Grid */
 .tetris-grid
 {
-	display: grid;
-	grid-template-rows: repeat(var(--grid-rows), 1fr);
-	gap: var(--border-width);
+	--_border: var(--border-width) solid var(--color-dark);
+
+	container: TetrisGrid / size;
+	display: flex;
+	flex-flow: column nowrap;
+	height: 100%;
 }
 
 .tetris-grid__row
 {
-	display: grid;
-	grid-template-columns: repeat(var(--grid-cols), 1fr);
-	gap: var(--border-width);
+	display: flex;
+	flex-flow: row nowrap;
+	justify-content: center;
+}
+
+.tetris-grid__cell
+{
+	width: min(100cqw / var(--_grid-cols), 100cqh / var(--_grid-rows));
+	aspect-ratio: 1;
+	border: 1px solid var(--color-darker);
+}
+
+.tetris-grid__row:first-child .tetris-grid__cell
+{
+	border-top: var(--_border);
+}
+
+.tetris-grid__row:last-child .tetris-grid__cell
+{
+	border-bottom: var(--_border);
+}
+
+.tetris-grid__cell:first-child
+{
+	border-left: var(--_border);
+}
+
+.tetris-grid__cell:last-child
+{
+	border-right: var(--_border);
 }
